# CustomModules

./: CMakeLists.txt  CMakeListsBackup.txt  buildScript.sh  chybaDziala.sh  main.cpp
source/: math.cppm
